--- a/web/src/main/resources/web/css/tooltip.css
+++ b/web/src/main/resources/web/css/tooltip.css
@@ -9,20 +9,21 @@
 	float: right;
 	background-color: var(--navbar-background-colour);
 	padding: 0.5rem;
-	position: absolute;
 	color: white;
 }
 
 .tooltip-inner {
 	border-radius: 0.5rem;
-	*left: -100%;
 	top: 100%;
 	transition: visibility 0s linear, opacity 0.25s linear;
 	opacity: 0;
+	z-index: 1;
+	position: fixed;
 }
 
 .tooltip-inner img {
-	width: 25vw;
+	width: 50vw;
+	border-radius: 0.25rem;
 }
 
 .tooltip-inner p {
@@ -33,6 +34,7 @@
 .tooltip:hover .tooltip-inner {
 	visibility: visible;
 	opacity: 1;
+	position: absolute;
 }
 
 .tooltip:hover {
@@ -46,6 +48,6 @@ only screen and (in-resolution: 192dpi) and (min-width: 320px),
 only screen and (min-resolution: 2dppx) and (min-width: 320px),
 only screen and (max-width: 768px) {
 	.tooltip-inner img {
-		width: 50vw;
+		width: 75vw;
 	}
 }
